--- a/Test02/Views/KeToan/CongnoDL.cshtml
+++ b/Test02/Views/KeToan/CongnoDL.cshtml
@@ -2,7 +2,7 @@
 @using Test02.Models;
 
 @{
-    ViewBag.Title = "CongnoDL";
+    ViewBag.Title = "Danh sách đơn hàng chưa thanh toán đại lý";
     Layout = "~/Views/KeToan/Layout/_LayoutPageKeToan.cshtml";
     QuanLyDLEntities2 db = new QuanLyDLEntities2();
     ViewBag.dsdl = "active";
@@ -24,19 +24,13 @@
                 var tongno = string.Format("{0:0,0 vnđ}", ViewBag.TongCN);
             }
             <div class="detail-daily">
+                <p style="text-align:center">
+                    <strong>Mã đại lý: </strong>@Html.DisplayFor(modelItem => Session["Madly"])- @Html.DisplayFor(modelItem => daily.MaLoaiDL)
+                </p>
                 <p>
                     <strong>Tên đại lý: </strong>@Html.DisplayFor(modelItem => daily.TenDL)
                 </p>
-                <div class="iddaily">
-                    <p>
-                        <strong>Mã đại lý: </strong>@Html.DisplayFor(modelItem => Session["Madly"])
-                    </p>
-                    <p>
-                        <strong>Loại đại lý: </strong>@Html.DisplayFor(modelItem => loaidl.TenDaiLy)
-                    </p>
-
-
-                </div>
+               
                 <div class="thongtin-daily">
                     <p>
                         <strong>Địa chỉ </strong>@Html.DisplayFor(modelItem => daily.DiaChi)
@@ -61,7 +55,7 @@
                 }
             </div>
             <div class="row" >
-                <div class="col-sm-12">
+                <div class="col-sm-12  table-responsive">
                     <table class="table table-hover table-bordered js-copytextarea dataTable no-footer" cellpadding="0" cellspacing="0" border="0" id="sampleTable" role="grid" aria-describedby="sampleTable_info">
                         @*//Phần render từng dòng trong C#*@
                         <thead>
@@ -81,7 +75,7 @@
                             }
                             @foreach (var item in Model)
                             {
-                                if (item.TinhTrangThanhToan == "Chưa thanh toán")
+                                if (item.TinhTrangThanhToan == "Chưa thanh toán" && item.TinhTrangGH=="Đã giao hàng")
                                 {
 
                                     <tr>
