--- a/Test02/Views/KeToan/Layout/_LayoutPageKeToan.cshtml
+++ b/Test02/Views/KeToan/Layout/_LayoutPageKeToan.cshtml
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
     <!-- Main CSS-->
+   
     <link rel="stylesheet" href="~/Content/Test01/main.css">
-
-
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
     <!-- or -->
     <link rel="stylesheet" href="https://unpkg.com/boxicons@latest/css/boxicons.min.css">
@@ -17,11 +16,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.css">
-
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="~/Views/KeToan/Layout/ketoan.js"></script>
 
 
 
@@ -90,7 +84,7 @@
             </li>
             <li>
                 <a class="app-menu__item @ViewBag.dsdl" href="~/KeToan/DSDaiLy">
-                    <i class='app-menu__icon bx bx bx-id-card'></i><span class="app-menu__label">Công nợ Đại lý</span>
+                    <i class='app-menu__icon bx bx bx-id-card'></i><span class="app-menu__label">Công nợ</span>
                 </a>
             </li>
             @*<li>
@@ -105,8 +99,8 @@
             </li>
 
             <li>
-                <a class="app-menu__item @ViewBag.ln" href="~/KeToan/LoiNhuan">
-                    <i class='app-menu__icon bx bx-task'></i><span class="app-menu__label">Lợi Nhuận</span>
+                <a class="app-menu__item @ViewBag.tk" href="~/KeToan/ThongKe">
+                    <i class='app-menu__icon bx bx-task'></i><span class="app-menu__label">Thống kê</span>
                 </a>
             </li>
 
@@ -127,25 +121,21 @@
             @RenderBody()
         </div>
     </main>
-    <script src="js/jquery-3.2.1.min.js"></script>
-    <!--===============================================================================================-->
-    <script src="js/popper.min.js"></script>
-    <script src="https://unpkg.com/boxicons@latest/dist/boxicons.js"></script>
-    <!--===============================================================================================-->
-    <script src="js/bootstrap.min.js"></script>
-    <!--===============================================================================================-->
-    <script src="js/main.js"></script>
-    <!--===============================================================================================-->
-    <script src="js/plugins/pace.min.js"></script>
-    <!--===============================================================================================-->
-    <script type="text/javascript" src="js/plugins/chart.js"></script>
+    <script src="~/Content/js/jquery-3.2.1.min.js"></script>
+    <script src="~/Content/js/popper.min.js"></script>
+    <script src="~/Content/js/bootstrap.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-
-    <script type="text/javascript" src="~/Scripts/jquery.dataTables.min.js"></script>
-
-    <script type="text/javascript" src="~/Scripts/dataTables.bootstrap.min.js"></script>
-
+    <script src="src/jquery.table2excel.js"></script>
+    <script src="~/Content/js/main.js"></script>
+    <!-- The javascript plugin to display page loading on top-->
+    <script src="~/Content/js/plugins/pace.min.js"></script>
+    <!-- Page specific javascripts-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.2/jquery-confirm.min.js"></script>
+    <!-- Data table plugin-->
+    <script type="text/javascript" src="~/Content/js/plugins/jquery.dataTables.min.js"></script>
+    <script type="text/javascript" src="~/Content/js/plugins/dataTables.bootstrap.min.js"></script>
     <script type="text/javascript">$('#sampleTable').DataTable();</script>
+
 
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <!--===============================================================================================-->
@@ -222,8 +212,6 @@
             }
         }
     </script>
-    <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.5/jspdf.min.js"></script>
 </body>
 </html>
